# redwatch

./: Cargo.toml  README.md
src/: mailgun.rs  main.rs  reddit.rs
