[package]
name = "redwatch"
version = "0.1.0"
authors = ["J/A <archer884@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
hashbrown = { version = "0.8.2", features = ["serde"] }
reqwest = { version = "0.10.8", features = ["blocking", "json"] }
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.48"
structopt = "0.3.17"
chrono = "0.4.15"
